complete my promo section

--- a/styles/style.css
+++ b/styles/style.css
@@ -216,3 +216,80 @@ color: #E95A08;
     transform: rotate(360deg);
   }
 }
+
+
+/* background-section */
+
+.promo-section {
+  padding: 20px;
+  margin-top: 95px;
+  
+}
+
+.promo-container {
+  display: flex;
+  gap: 15px;
+  height: 400px;
+}
+
+.left-column {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  flex: 1;
+  overflow-y: auto;
+}
+
+.right-column {
+  flex: 2;
+
+}
+
+.promo-card {
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  position: relative;
+}
+
+.promo-card.small {
+  height: 423px;
+}
+
+.promo-card.large {
+  height: 100%;
+}
+
+.promo-content {
+  
+  padding: 15px;
+  border-radius: 10px;
+}
+
+.promo-content h2{
+    margin: 0;
+    font-size: 2.5rem;
+}
+.promo-content h4 {
+    font-size: 1.2rem;
+  margin: 0;
+  font-family: "Noto Serif", serif;
+  
+}
+
+.promo-content a {
+    font-size: 1.4rem;
+  color: white;
+  font-weight: bold;
+  display: inline-block;
+  margin-top: 8px;
+  text-decoration: underline;
+}
+.right-column a{
+    font-size: 1.625rem;
+}
