--- a/styles/style.css
+++ b/styles/style.css
@@ -293,3 +293,53 @@ color: #E95A08;
 .right-column a{
     font-size: 1.625rem;
 }
+/* promo section */
+.header {
+            background: url('/images/assets/news-letter-bg.png') no-repeat center/cover;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            text-align: center;
+            position: relative;
+            width: 100%;
+            height: 450px;
+            
+        }
+        .header h1 {
+             font-family: "Noto Serif", serif;
+            font-size: 3.125rem;
+            margin-bottom: 20px;
+        }
+        .subscribe-form {
+            display: flex;
+            
+    
+        }
+        .subscribe-form input {
+            padding: 0 20px;
+            font-size: 1rem;
+            border: none;
+            width: 644px;
+            height: 50px;
+
+            
+        }
+        
+        .subscribe-form button {
+             font-family: "Inter", sans-serif;
+            padding: 10px 40px;
+            font-size: 1.1rem;
+            background-color: #E95A08;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        .subscribe-form button:hover {
+            background-color: #e07b2c;
+        }
+
+        /* footer-section */
+
+        
