added some mistake

--- a/styles/style.css
+++ b/styles/style.css
@@ -49,6 +49,9 @@ nav li a{
     font-size: medium;
     font-weight: bold;
 }
+.dark-02{
+    color: #000000;
+}
 .dark-2{
     color:#8987A1 ;
     font-size: medium;
