--- a/styles/style.css
+++ b/styles/style.css
@@ -450,7 +450,7 @@ footer {
 
 @media screen and (max-width: 576px) {
    
-    .dark-2{
+    .dark-2,.dark-02{
 display: none;
     }
     
@@ -594,6 +594,7 @@ display: none;
     .header {
         height: 300px;
         padding: 20px;
+        max-width: 100%;
     }
     
     .header h1 {
