--- a/styles/style.css
+++ b/styles/style.css
@@ -602,9 +602,22 @@ display: none;
         margin-bottom: 30px;
         line-height: 1.2;
     }
-    .subscribe-form{
+   
+    .subscribe-form {
         max-width: 100%;
+        margin: 0 20px; 
     }
+    
+    .subscribe-form input {
+        font-size: 0.95rem;
+        padding: 0 12px;
+    }
+    
+    .subscribe-form button {
+        padding: 10px 25px;
+        font-size: 1rem;
+    }
+
 
     .footer-container {
         flex-direction: column;
